Rank Method Added